--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
         <img src="/Imagenes/logo cultivos-hons png.png" alt="">
     </section>
 
-    <script type="text/javascript" src="./js/arraymushroom.js" defer></script>
+    <script type="text/javascript" src="./Js/arraymushroom.js" defer></script>
     <script type="text/javascript" src="./Js/categorias.js" defer></script>
-    <script type="text/javascript" src="./js/hour.js" defer></script>
+    <script type="text/javascript" src="./Js/hour.js" defer></script>
 
 </body>
 </html>
